--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
     margin: 0;
     padding: 0;
     height: 100%;
+    background-image: url("images/rf.png");
+
 }
 .body-home{
     background-image: url("images/rf.png");
