--- a/style.css
+++ b/style.css
@@ -1,65 +1,30 @@
-html{
-    height: 100%;
-}
-body{
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-image: url("images/rf.png");
-
-}
-.body-home{
-    background-image: url("images/rf.png");
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat:no-repeat;
-    background-size: cover ;
-}
-
-    /********** HEADER*************/
-
-.header{
-    background-color: #1f2124;
-    width: 100%;
-    height: 50px;
-    top: 0;
-    position: fixed;
-    overflow: hidden;
+.home-menu-item {
+    color: rgba(8, 1, 1, 0.986);
+    font-size: 25px;
+    font-weight: bold;
     text-align: center;
-
-}
-.header i{
-    float: left;
-    padding: 17px 0px 0px 17px;
-
-
-}
- /********** HOME PAGE*************/
-         
- #home-logo-text{
-    width: auto;
+    border: 5px solid #a8b1b6ea;
     display: block;
     margin: auto;
-    padding: 25px;
-        
+    margin-bottom: 10px;
+    width: 80%;
     
-}
-/********** HOME PAGE *************/
-.home-menu-item {
-text-decoration: none;
-text-transform: uppercase;
-color: rgba(8, 1, 1, 0.986);
-font-size: 25px;
-font-weight: bold;
-text-align: center;
-border: 5px solid #a8b1b6ea;
-display: block;
-margin: auto;
-margin-bottom: 10px;
-width: 80%;
-
-}
-
-
-
+    }
+    #home-image{
+        width: auto;
+        display: block;
+        margin: auto;
+        padding: 55px;
+            
+        
+    }
+    .body-menu{
+        background-image: url("images/rf.png");
+        background-position: center;
+        background-attachment: fixed;
+        background-repeat:no-repeat;
+        background-size: cover ;
+    
+    }
+    
+    
